--- a/app/table/table.component.html
+++ b/app/table/table.component.html
@@ -1,3 +1,11 @@
+//Needed to install dependencies to use Angular datatables.
+//npm install jquery --save
+//npm install datatables.net --save
+//npm install datatables.net-dt --save
+//npm install angular-datatables --save
+//npm install @types/jquery --save-dev
+//npm install @types/datatables.net --save-dev
+
 <table>
   <tr>
     <th>ID</th>
