--- a/app/app.component.html
+++ b/app/app.component.html
@@ -14,7 +14,7 @@
     <div class="alert alert-info">
       <p>Sort Type: {{ sortType }}</p>
       <p>Sort Reverse: {{ sortReverse }}</p>
-      <p>Search Query: {{ searchData }}</p>
+      <p>Search Data: {{ searchData }}</p>
     </div>
 
     <form>
